:apple: test render video inside md file

--- a/.pubignore
+++ b/.pubignore
@@ -22,30 +22,9 @@ macos/
 windows/
 web/
 
-# Include only relevant parts of example
-example/android/
-example/ios/
-example/linux/
-example/macos/
-example/windows/
-example/web/
-example/.dart_tool/
-example/.idea/
-example/.vscode/
-example/build/
-example/test/
-# Exclude everything in example
-example/**
+demo/
 
-# Allow just the minimal necessary example files
-!example/pubspec.yaml
-!example/lib/
-!example/lib/**
-!example/main.dart
 
-# Allow your actual package files
-!lib/
-!lib/**
 !pubspec.yaml
 !README.md
 !LICENSE
