--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: draggable_animation
-description: A starting point for Dart libraries or applications.
-version: 0.0.1
+description: >
+  A Flutter package that enables smooth drag-and-drop animations between menu areas, 
+  inspired by iOS-style rearranging. Perfect for custom animated menus and item sorting.
+
+version: 0.0.2
 homepage : https://horleng.vercel.app/
 repository: https://github.com/horlengg/flutter_draggable_animation
 
